[gd_scene load_steps=9 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://playspace.gd" type="Script" id=2]
[ext_resource path="res://statsPanArea.gd" type="Script" id=3]
[ext_resource path="res://LucidaTypewriterBold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 511.625, 61.75 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 512, 300 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="StatsPan" type="Panel" parent="."]
margin_left = 11.0
margin_top = 10.0
margin_right = 1015.0
margin_bottom = 105.0

[node name="TimeStat" type="Label" parent="StatsPan"]
margin_left = 770.0
margin_top = 9.0
margin_right = 952.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "Playing Time:"

[node name="ScoreStat" type="Label" parent="StatsPan"]
margin_left = 12.0
margin_top = 8.0
margin_right = 140.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "Score:"

[node name="AmmoCount" type="Label" parent="StatsPan"]
margin_left = 14.0
margin_top = 53.0
margin_right = 138.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 2 )
text = "Ammo:"

[node name="statsPanArea" type="Area2D" parent="StatsPan"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StatsPan/statsPanArea"]
position = Vector2( 502.375, 44 )
shape = SubResource( 1 )

[node name="lines" type="Label" parent="StatsPan"]
margin_left = 775.0
margin_top = 52.0
margin_right = 957.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
text = "Timeline #:"

[node name="ColorRect" type="ColorRect" parent="StatsPan"]
margin_left = 150.0
margin_top = 10.0
margin_right = 752.0
margin_bottom = 83.0
color = Color( 0.0235294, 0.0235294, 0.0235294, 1 )

[node name="comArea" type="Label" parent="StatsPan/ColorRect"]
margin_top = 28.0
margin_right = 599.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 4 )
autowrap = true

[node name="comTitle" type="Label" parent="StatsPan/ColorRect"]
margin_left = 5.0
margin_right = 129.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 4 )
text = "Boss Comms:"
valign = 1
autowrap = true

[node name="playspace" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="playspace"]
position = Vector2( 515, 307 )
shape = SubResource( 3 )

[connection signal="area_entered" from="StatsPan/statsPanArea" to="." method="_on_statsPanArea_area_entered"]
[connection signal="area_exited" from="StatsPan/statsPanArea" to="." method="_on_statsPanArea_area_exited"]
[connection signal="body_entered" from="StatsPan/statsPanArea" to="." method="_on_statsPanArea_body_entered"]
[connection signal="body_exited" from="StatsPan/statsPanArea" to="." method="_on_statsPanArea_body_exited"]
[connection signal="body_exited" from="playspace" to="." method="_on_playspace_body_exited"]
